# mx

./: .dockerignore  .gitignore  .html  .md  .pillar.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml  ascii_ref.txt  bee-cut.txt  downloadDF.sh  feed  links.gn  pillar  render.sh  robots.txt  test.html  test2.html  time  tmp.txt  twtxtc  watch
_pages/: 2020-7-25-Hello-World.md  2020-7-25-Wave-Function-Collapse-Intro.md  2020-8-2-Overview-to-WFC.md  2020-8-27-WFC-Tile-Generator.md  about.md  devtober.md  drawings.md  index.md  intro_to_wfc.md  now.md  overview_to_wfc.md  plan9.md  wfc_propagator_constructor.md  wfc_tile_generator.md  wiki.md
docs/: 2015-12-30-markdown-cheatsheet-demo.html  2020-08-28-WFC-Propagator-Constructor.html  2020-7-25-Hello-World.html  2020-7-25-Wave-Function-Collapse-Intro.html  2020-8-2-Overview-to-WFC.html  2020-8-27-WFC-Tile-Generator.html  404.html  about.html  backyard_hike_260321.html  bookmarks.html  bucephalus.html  bucephalus.mhtml  camera.html  casio.html  climbing.html  devtober.html  df-start.html  digital-nest-leaving.html  drawings.html  eating.html  ecs.html  exploring-computer-literacy.html  f3.html  feed.xml  ffstream.html  files.html  forum.html  games.html  grimoire.html  hallowseve-2022.html  hello.html  hike-260522.html  hiking.hthtml  hiking.html  home.html  ideas.html  index.html  intro_to_wfc.html  inventory.html  ios-sync.html  (+53 more)
docs-old/: 404.html  backyard_hike_260321.html  bucephalus.html  camera.html  devtober.html  drawings.html  eating.html  ecs.html  games.html  hiking.html  ideas.html  index.html  inventory.html  learning_rust.html  liminal-spaces.html  marin_headlands_200221.html  mdcheatsheet.html  meta-site-gen.html  midnight_hike_211021.html  mushrooms.html  norwegian.html  pillar.html  plan9.html  reading.html  recipes.html  side_quests.html  style.css  tests.css  tests.html  thoughts.html  uxn_notes.html  wfc-guide.html  wiki.html  writing.html
docs-old/assets/: icon.chr
docs-old/files/: mtrack.rs  thul.md
docs-old/projects/: proctime  ptable
docs/.vscodium/: Cookies  Network Persistent State  QuotaManager  TransportSecurity  machineid  storage.json
docs/api/: forum.js  hey.js
docs/capstone/: artifact1.html  artifact10.html  artifact12.html  artifact4.html  artifact5.html  artifact6.html  artifact7.html  artifact8.html  artifact9.html  index.html  lobby.html  references.html  room2.html  room3.html  style.css
docs/capstone_project/: artifact1.html  artifact2.html  artifact3.html  artifact4.html  artifact5.html  artifact6.html  lobby.html  office.html  references.html  room1.html  room2.html  room3.html  room4.html  room5.html  room6.html  style.css
docs/files/: doom.txt  kitty-unicode-favorites.conf  kitty.conf  micro-granite.yaml  minecraft.service  mtrack.rs  newsboat-config  starship.toml  thul.html  thul.md
docs/projects/: colorchange  mtrack  proctime  proctrack  prpnd  reformat  sumtime  syncpi  uxnrun
docs/recipes/: pasta-carbonara.html  ramen-noodles.html  sage-ramen.html  sodium-carbonate.html  spaetzle.html
docs/resume/: index.html  style.css
docs/rust-tools/: average-time.html  fast-zip.html  mean.html  standard-deviation.html  time.html
docs/scripts/: hey.js  playlist.js
docs/videos/: determ-df.mp4.REMOVED.git-id
docs_old/: about.html  devtober.html  mdcheatsheet.html  now.html  overview_to_wfc.html  plan9.html  site.html  twtxt.txt  wfc_tile_generator.html  wiki.html
docs_old/capstone/: artifact1.html  artifact11.html  artifact2.html  artifact9.html  office.html  room1.html  room2.html  room3.html  room4.html  room5.html
handlebar/: login.html.hbs  session.html.hbs
lua-plugins/: date
pages/: about.gn  about.md  about.mr  backyard_hike_260321.gn  backyard_hike_260321.mr  bookmarks.gn  bucephalus.gn  bucephalus.mr  camera.gn  casio.gn  climbing.gn  devtober.gn  devtober.md  devtober.mr  df-start.gn  digital-nest-leaving.gn  drawings.gn  drawings.mr  eating.gn  ecs.gn  exploring-computer-literacy.gn  f3.gn  ffstream.gn  files.gn  forum.md  games.gn  games.mr  grimoire.gn  grimoire.md  grimoire.mr  hallowseve-2022.gn  hello.gn  hello.mr  hike-260522.gn  hiking.gn  hiking.html  hiking.mr  home.gn  home.mr  ideas.gn  (+83 more)
pages/recipes/: pasta-carbonara.gn  ramen-noodles.gn  sage-ramen.gn  sodium-carbonate.gn  spaetzle.gn
pages/resume/: index.gn
pages/rust-tools/: average-time.gn  fast-zip.gn  mean.gn  standard-deviation.gn  time.gn
pages_md/: grimoire.md  learning_rust.md  wfc_tile_generator.md
plugins/: .pillar.toml  backlinks  catfile  catfile.rs  date  date.rs  description  doc-gen  feed  files  graph  latest  music  py-date  py-title  rss  stats  style  style.rs  title  title.py  title.rs  tree  utils.rs
public/: CNAME  about.html  backyard_hike_260321.html  bookmarks.html  bucephalus.html  camera.html  casio.html  climbing.html  devtober.html  df-start.html  digital-nest-leaving.html  drawings.html  eating.html  ecs.html  exploring-computer-literacy.html  f3.html  feed.xml  ffstream.html  files.html  games.html  grid-example.html  grimoire.html  hallowseve-2022.html  hello.html  hike-260522.html  hiking.html  home.html  ideas.html  intro_to_wfc.html  inventory.html  ios-sync.html  late-night-writing-130323.html  later.html  learning-nim.html  learning_rust.html  liminal-spaces.html  marin_headlands_200221.html  meta-site-gen.html  midnight_hike_211021.html  movies.html  (+43 more)
public/assets/: css-inject.js  midnight-hike.m4a  prism.css  prism.js  strawberry_canyon.m4a
public/bussycats/: graph.json  index.html  no-nick.json  theoretical.json
public/files/: bee.txt  cat-sync  get-some-more.txt  kexp.mp3.m3u  monitorswitch.txt  mpv.conf  per-tab.txt  uxn-zine.tar
public/projects/: listening  proctrack  uxnrun
public/recipes/: pasta-carbonara.html  ramen-noodles.html  sage-ramen.html  sodium-carbonate.html  spaetzle.html
public/resume/: index.html  style.css
src/: dev.rs  main.rs
src/api/: count.rs
templates/: center.html  default-subdir.html  default.html  default.html~  footer.html  forum.html  header.html  hello.html  resume.html
(+2431 files in other folders)
