!meta!
title: About
!meta!

[h2|Hi]

[p|I'm Ben, a person (who prefers they/them pronouns) from the bay area, though I go to school in Santa Cruz. I like to make [a, href: "recipes.html"|food], occasionally [a, href: "drawings.html"|draw], and tell computers to do things for me (though we often have disagreements).]

[p|I've worked on a few [a, href: "projects.html"|projects], including a [a, href: "https://flber.itch.io/"|game or two]. When I'm not getting frustrated with computers for disagreeing with what I want them to do, I enjoy [a, href: "hiking.html"|hiking], playing [a, href: "games.html"|video games], and [a, href: "reading.html"|reading].]

[p|If you want to contact me about commercial work, please first take a look at my [a, href: "resume/index.html"|resume]. Email is generally the best method of communication for me, and you can find my email address linked in the footer.]

[span|
	[img, loading: "lazy", style: "width:50%; display: inline-block;", src: "images/crow.jpg", alt: "myself drawn as a crow by one of my friends. I'm wearing overalls with small tools in them"|]
	[img, loading: "lazy", style: "width:48%; display: inline-block;", src: "images/profile-from-maya.jpg", alt: "a digital art profile picture made by a friend: androgynous person with dark hair smiling with their eyes closed"|]
]

[p|Because I'm not super experienced in any one field, I often find myself anxious asking those more knowledgeable. That's mostly because I don't want to waste their time, but I probably end up wasting more time by adding prefaces to my questions, such as:]
[ul|
	[li|Sorry to bother you, but...]
	[li|This may be a simple question, but...]
	[li|Pardon my lack of knowledge in this, but...]
	[li|I probably just missed the answer to this in the docs somewhere, but...]
]
[p|and others. I'll try to just cut to the chase from now on, but if you need some context as to why I'm asking about something you think is simple, please feel free to mentally add one of the above prefaces to the start of my question!]

[p|You can find the source code for this site in any of these places:]
[ul|
	[li|[a, href: "https://codeberg.org/flbr/mx"|codeberg]]
	[li|[a, href: "https://github.com/flber/Mineral-Existence"|github]]
	[li|[a, href: "https://git.sr.ht/~flber/mineral-existence"|srht]]
]

[p|You can also check out the [a, href: "inventory.html"|inventory] page for a list of the hardware and software I use.]

[p|Feel free to say hi on [a, href: "https://merveilles.town/@flbr"|mastodon] or via my [a, href: "mailto:benrhammond@gmail.com"|email]]

[p|I'm also on [a, href: "https://webring.xxiivv.com/#icons"|a webring]! All the sites on it are pretty neat, including those of my neighbours:]
[ul|
	[li|Alessia Bellisario's [a, href: "https://aless.co/"|anti/pattern]]
	[li|Martin Schotten's [a, href: "http://fragmentscenario.com/"|fragmentscenario]]
]

<!--
[p|This is my [a, href: "https://wobble.town"|wobble], his name is kronk!]
[a, href: "https://wobble.town/visit/"|[img, style: "margin-top:0em;width: 10%;", src: "https://wobble.town/visit/48/wobble.gif"|]]
-->
