!meta!
title: Bookmarks
!meta!

[h2|Bookmarks]

[p|There are lots of fun and interesting websites out there, so here's my start at listing some of my favorites!]

[div, class: "break"|]

[fieldset|
	[legend|[a, href: "https://memex.marginalia.nu/log/19-website-discoverability-crisis.gmi"|marginalia]]
	[p|A proposal, dear reader: Create a list of bookmarks linking to websites you find interesting, and publish it for the world to see. It's a bit strange, almost nobody seems to be doing this. Looking through a sample of personal websites, very few of them has links to other personal websites. A hyperlink isn't a marriage proposal. It is enough to find some redeeming quality in a website to link to it. It costs nothing, and helps bring traffic to pages that you yourself think deserve it]
]

[div, class: "break"|]

[a, href: "https://wiki.xxiivv.com/site/home.html"|XXIIVV]
[a, href: "https://www.thomasorus.com/"|Thomasorus]
[a, href: "https://ritualdust.com/"|Ritualdust]
[a, href: "http://100r.co/site/home.html"|Hundred Rabbits]
[a, href: "https://questionablecontent.net/"|Questionable Content]
[a, href: "https://xkcd.com/"|xkcd]
[a, href: "https://grimgrains.com/site/home.html"|Grimgrains]
[a, href: "https://mntre.com/"|MNT Reform]
[a, href: "https://fdisk.space/"|fdisk]
[a, href: "https://wiki.xxiivv.com/site/bookmarks.html"|XXIIVV - Bookmarks]
[a, href: "https://spacecraft.ssl.umd.edu/akins_laws.html"|Akin's Laws of Spacecraft Design]
[a, href: "https://solar.lowtechmagazine.com/"|Low Tech Magazine]
[a, href: "https://deathtobullshit.com/"|Death to Bullshit]
[a, href: "https://thomasorus.com/html-tips.html"|HTML Tips]
[a, href: "https://based.cooking/"|Based Cooking (beware the Luke Smith)]
[a, href: "https://azlen.me/"|Azlen]
[a, href: "https://puprika.itch.io/"|Puprika]
[a, href: "https://www.carlburton.io/"|Carl Burton]
[a, href: "https://compudanzas.net/uxn_tutorial.html"|Compudanzas' uxn tutorial]
[a, href: "https://en.wikipedia.org/wiki/Category:One-of-a-kind_computers"|One-of-a-kind computers]
[a, href: "http://osp.kitchen/"|Open Source Publishing]
[a, href: "https://theycantalk.com/"|They Can Talk]
[a, href: "https://cyberdeck.cafe/"|The Cyberdeck Cafe]
[a, href: "https://www.nushell.sh/book/"|Nu Shell]
[a, href: "https://www.calligraphr.com/en/"|Calligraphr]
[a, href: "https://pbat.ch/wiki/"|Pbat]
[a, href: "https://sciencenorway.no/ulv/wolf-packs-dont-actually-have-alpha-males-and-alpha-females-the-idea-is-based-on-a-misunderstanding/1850514"|article on wolves]
[a, href: "https://www.redaction.us/"|Redaction font]
[a, href: "https://www.midori-japan.co.jp/md/en/products/mdnote/"|Midori MD]
[a, href: "https://search.marginalia.nu/"|Marginalia search engine]
[a, href: "https://blog.pimaker.at/texts/rvc1/"|Linux in a pixel shader]
[a, href: "https://seirdy.one/2021/01/12/password-strength.html"|Physical immunity to brute-force attacks]
[a, href: "https://writings.stephenwolfram.com/2020/04/finally-we-may-have-a-path-to-the-fundamental-theory-of-physics-and-its-beautiful/"|Wolfram theory of physics]
[a, href: "https://energypedia.info/wiki/Main_Page"|energypedia]
[a, href: "https://www.jivamaterials.com/"|recycleable pcb]
[a, href: "http://aboutmako.makopool.com/"|Mako's site]
[a, href: "http://www.asimovonline.com/asimov_home_page.html"|Asimov online]
[a, href: "https://comradery.co/"|Comdradery worker coop]
