!meta!
title: Bookmarks
!meta!

[h2|Bookmarks]

[p|There are lots of fun and interesting websites out there, so here's my start at listing some of my favorites!]


[fieldset|
	[legend|[a, href: "https://memex.marginalia.nu/log/19-website-discoverability-crisis.gmi"|marginalia]]
	[p|A proposal, dear reader: Create a list of bookmarks linking to websites you find interesting, and publish it for the world to see. It's a bit strange, almost nobody seems to be doing this. Looking through a sample of personal websites, very few of them has links to other personal websites. A hyperlink isn't a marriage proposal. It is enough to find some redeeming quality in a website to link to it. It costs nothing, and helps bring traffic to pages that you yourself think deserve it]
]

[h3|Friends & Neighbors]
[ul|
	[li|[a, href: "https://mudvoid.com/"|MudVoid]]
	[li|[a, href: "https://noa.gaiwan.org"|Noa [img style: "display: inline-block; border: 1px solid var(--text)", src: "http://noa.gaiwan.org/button.gif", alt: "the name noa in handwritten letters"|]]]
]

[h3|Sustainability]
[ul|
	[li|[a, href: "https://wiki.xxiivv.com/site/home.html"|XXIIVV]]
	[li|[a, href: "http://100r.co/site/home.html"|Hundred Rabbits]]
]

[h3|Cooking]
[ul|
	[li|[a, href: "https://grimgrains.com/site/home.html"|Grimgrains]]
	[li|[a, href: "https://www.phaidon.com/store/food-cook/the-nordic-cookbook-9780714868721/"|The Nordic cookbook]]
]

[h3|Essays]
[ul|
	[li|[a, href: "https://deathtobullshit.com/"|Death to Bullshit]]
	[li|[a, href: "https://compudanzas.net/uxn_tutorial.html"|Compudanzas' uxn tutorial]]
	[li|[a, href: "https://blackgnu.net/on-blockchain.html"|On Blockchain and Web3]]
	[li|[a, href: "https://en.wikipedia.org/wiki/Category:One-of-a-kind_computers"|One-of-a-kind computers]]
	[li|[a, href: "https://blog.pimaker.at/texts/rvc1/"|Linux in a pixel shader]]
	[li|[a, href: "https://seirdy.one/2021/01/12/password-strength.html"|Physical immunity to brute-force attacks]]
	[li|[a, href: "https://phoboslab.org/log/2021/11/qoi-fast-lossless-image-compression"|Fast and simple image compression]]
	[li|[a, href: "https://writings.stephenwolfram.com/2020/04/finally-we-may-have-a-path-to-the-fundamental-theory-of-physics-and-its-beautiful/"|Wolfram theory of physics]]
	[li|[a, href: "https://phoboslab.org/log/2021/09/q1k3-making-of"|Quake in 13kb of JS]]
]

[h3|Art]
[ul|
	[li|[a, href: "https://ritualdust.com/"|Ritualdust]]
	[li|[a, href: "https://questionablecontent.net/"|Questionable Content]]
	[li|[a, href: "https://xkcd.com/"|xkcd]]
	[li|[a, href: "https://www.carlburton.io/"|Carl Burton]]
	[li|[a, href: "https://200-50.com/"|200/50]]
]

[h3|Design]
[ul|
	[li|[a, href: "https://spacecraft.ssl.umd.edu/akins_laws.html"|Akin's Laws of Spacecraft Design]]
	[li|[a, href: "https://thomasorus.com/html-tips.html"|HTML Tips]]
]

[h3|Hardware]
[ul|
	[li|[a, href: "https://mntre.com/"|MNT Reform]]
	[li|[a, href: "https://www.jivamaterials.com/"|recycleable pcb]]
	[li|[a, href: "https://www.midori-japan.co.jp/md/en/products/mdnote/"|Midori MD]]
]

[h3|Personal Sites]
[ul|
	[li|[a, href: "https://www.thomasorus.com/"|Thomasorus]]
	[li|[a, href: "https://fdisk.space/"|fdisk]]
	[li|[a, href: "https://azlen.me/"|Azlen]]
	[li|[a, href: "https://ocean-waves.xyz/"|Ocean Waves]]
	[li|[a, href: "https://pbat.ch/wiki/"|Pbat]]
	[li|[a, href: "http://aboutmako.makopool.com/"|Mako's site]]
	[li|[a, href: "https://coolguy.website/"|Coolguy website]]
	[li|[a, href: "https://regularflolloping.com/"|Regular Flolloping]]
	[li|[a, href: "https://m15o.ichi.city/"|m15o]]
]

[h3|Communities]
[ul|
	[li|[a, href: "https://cyberdeck.cafe/"|The Cyberdeck Cafe]]
	[li|[a, href: "https://midnight.pub/"|Midnight Pub]]
	[li|[a, href: "https://forum.merveilles.town/"|Merveilles Forum]]
]

[h3|Research]
[ul|
	[li|[a, href: "https://sciencenorway.no/ulv/wolf-packs-dont-actually-have-alpha-males-and-alpha-females-the-idea-is-based-on-a-misunderstanding/1850514"|article on wolves]]
	[li|[a, href: "https://energypedia.info/wiki/Main_Page"|energypedia]]
	[li|[a, href: "https://solar.lowtechmagazine.com/"|Low Tech Magazine]]
	[li|[a, href: "http://osp.kitchen/"|Open Source Publishing]]
	[li|[a, href: "https://blog.backtotheroots.com/2018/04/27/greenhouses-transformed-iceland/"|Geothermal greenhouses in Iceland]]
]

[h3|Software]
[ul|
	[li|[a, href: "https://www.nushell.sh/book/"|Nu Shell]]
	[li|[a, href: "https://www.calligraphr.com/en/"|Calligraphr]]
	[li|[a, href: "https://www.redaction.us/"|Redaction font]]
	[li|[a, href: "https://search.marginalia.nu/"|Marginalia search engine]]
	[li|[a, href: "https://ditherit.com/"|Ditherit]]
	[li|[a, href: "https://comradery.co/"|Comdradery worker coop]]
]

[h3|Games]
[ul|
	[li|[a, href: "https://puprika.itch.io/"|Puprika]]
	[li|[a, href: "https://speakthesky.itch.io/like-skyscrapers-v2"|Like Skyscrapers Blotting Out The Sun]]
	[li|[a, href: "https://bay12games.com/dwarves/"|Dwarf Fortress]]
]
