!meta!
title: Bucephalus
!meta!

[h2|Bucephalus]

[p|This is my little friend Bucephalus (a random name which I find entertaining), a raspberry pi 4 running [a, href: "plan9.html"|9front]. I don't use it for much right now, but I'm excited to learn more about Plan 9!]

[img, src: "images/bucephalus/front.jpg", alt: "a front view of a tiny computer in a cardboard housing"|]
[p|Isn't it cute!]

[img, src: "images/bucephalus/left.jpg", alt: "a view from the left of a tiny computer in a cardboard housing"|]
[p|The enclosure was made from the box the [a, href: "https://www.uctronics.com/uctronics-3-5-inch-hdmi-tft-lcd-display-with-touch-screen-touch-pen-3-heat-sinks-for-raspberry-pi-3-model-b-pi-2-model-b-pi-b.html"|screen] came in.]

[img, src: "images/bucephalus/right.jpg", alt: "a view from the right of a tiny computer in a cardboard housing"|]
[p|It's a little scuffed, but it'll do for now.]
 
 
 
 
 
