!meta!
title: Camera
!meta!

[h2|Kodak No. 2 Folding Autographic Brownie]

[p|I recently (150222) got a camera!]

[p|It's not an especially useful camera, as I still need to get film for it (and because it uses film!), but I think it's neat :D]

[p|I found it at an antique fair, in even worse state than the picture shows, and cleaned it up a little. At some point I'd love to get some film for it and see how the photos look, but for now I like just having it on my desk as a little thing to fiddle with (though it's more than 100 years old!)]

[p|Speaking of photos, here are some pictures of it in all of its rusted glory]

[img, src: "images/camera/back-closed-dith.png", alt: "the camera with the back facing up"|]
[img, src: "images/camera/front-closed-dith.png", alt: "the camera with the front facing up"|]
[img, src: "images/camera/open-side-dith.png", alt: "the camera, with the lense apparatus open, on its side"|]
[img, src: "images/camera/open-up-dith.png", alt: "the camera, with the lense apparatus open, standing up"|]
