!meta!
title: Climbing
!meta!

[h2|Climbing]

[p|I really enjoy rock climbing, mostly bouldering, but my school doesn't have any official on-campus climbing walls and the nearest gym is a half-hour bus ride away. What I've done recently is found some buildings which have rough sandstone brick walls to climb late at night.]

[p|None of the walls have any especially long or technical problems, but they're fun enough and are decent practice for slopey holds.]

[img, src: "images/climbing/pitch-2-dith.jpg", alt: "sandstone brick wall at night, climbing gear on floor below"|]

[img, src: "images/climbing/pitch-1-dith.jpg", alt: "close-up of the wall"|]
