!meta!
title: Devtober
!meta!

[h2|Devtober 2020]

[p|Wooo! It's October! Other than being one of my favorite months, I'm excited for October this year because I'm participating in a game jam called [a, href: "https://itch.io/jam/devtober-2019"|Devtober]. It's a challenge to work on a game a bit every day for the month of October, and if you want to learn more (or participate in it) I'd recommend checking out their page. Other responsibilities kicked my butt today, so I'm just going to write this overview of the idea and maybe a toot.]

[p|I'll be updating this page with dev-type news of my progress, as well as my mastodon account (with the hashtag `#devtober`).]

[p|My basic idea is an open world multiplayer where the players never see each other, only the abstract structures they can create. I'll be mostly brainstorming that idea for the rest of this week, but for now I need to sleep!]

[h3|051120 - An Anticlimactic Ending]
[p|Oh whale, that didn't go as I had hoped. I never finished a project, mostly as a result of my schoolwork load but also because I find it difficult to focus on a single project for long periods of time.]
[p|I'll keep this up as a note to self to both practice more with shorter projects and try to start smaller-scale long term endeavors, and maybe by next year I can try this again.]

[h3|091020 - Game brainstorming]
[p|This has been a pretty dull week so far, but I'm planning on spending this weekend more productively. I don't think I'm going to be able to do my original plan; it was just too complicated and I know I would have needed a lot of time to get it to look the way I wanted. I've been wanting to make a trade-focused game with a slower pace for a while now, so maybe I'll do that in some form. Recently I've also been thinking about how to implement a form of 2d construction mechanic, maybe to make vehicles? As I'm sure you can tell, still not quite sure what I want to do.]

[h3|061020 - Finally got the feed script working]
[p|Welp, that took longer than expected. Finally figured out how to insert multiple lines with `sed` (I just ended up putting the user-inputted text into a text file, and then inserting that text into the correct place of the target file). It's a bit jank, and I'd like to change how I'm getting user input (right now it's just `</dev/stdin`), but for now it'll do.]

[h3|021020 - First update]
[p|Spent most of today trying to implement a feed script to automatically add updates to a post quickly, but couldn't quite get it working. I don't have a ton of time for personal projects during the week (except for Wednesdays, which I always have free), so I think I'll be doing the actual gamedev on weekends, with weekdays reserved for planning. Hopefully I'll have some more interesting updates for all of you this weekend.]

 
 
 
 
 
